Bug 136474 - Selecting just-created motion path animation effect in the custom animation panel causes undefined funkiness (gen and kf5)
Summary: Selecting just-created motion path animation effect in the custom animation p...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Object-Animations
  Show dependency treegraph
 
Reported: 2020-09-04 19:22 UTC by Buovjaga
Modified: 2020-09-07 13:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File with shape and appear animation (12.39 KB, application/vnd.oasis.opendocument.presentation)
2020-09-04 19:22 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2020-09-04 19:22:03 UTC
Created attachment 165154 [details]
File with shape and appear animation

1. Open attached file as starting point
2. Select the shape
3. In the custom animation pane with the existing animation selected, change category to Motion Paths
4. Pick "Curve" from the list
5. Click and drag out a curve, double-click to finish it
6. Re-select the added animation in the top part of the sidebar pane
7. Move the mouse down to the effect list part at the bottom

You get thrown back to the state of adding the curve or perhaps something else will happen. Sometimes it's like the mouse button would be stuck in down position, so you cycle between the effects in the list just by moving over them.

This is not seen with GTK3.

Bibisected with linux-64-7.0 to 
https://git.libreoffice.org/core/commit/21e8ce9ab9a522d25e95773af59b7ccccaee4e54
weld custom animation panel

Adding Cc: to Caolán McNamara
Comment 1 Caolán McNamara 2020-09-06 18:57:59 UTC
the problem might be the change from a listbox to treeview and the select callback which happens now on a mouse down and not mouse up
Comment 2 Commit Notification 2020-09-07 08:09:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78389969a8f38edf4c13f0b070b4471c02f1d858

tdf#136474 wait until mouse grab is dropped to trigger selection callback

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2020-09-07 08:10:14 UTC
that resolves the problem for me, done in master backport to 7-0 in gerrit
Comment 4 Commit Notification 2020-09-07 09:08:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/9bcb2e2f56d6a2fd9290300a0bb2d2f776780264

tdf#136474 wait until mouse grab is dropped to trigger selection callback

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2020-09-07 13:06:08 UTC
Verified, thanks!

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 4b7ee7bd61f78be60211cc72ba36da987191266e
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 7 September 2020