tdf#136474 wait until mouse grab is dropped to trigger selection callback

Change-Id: I495b90b9661c32ad3ec71c2a2455d1576fb8f918
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102112
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>